Fixed missing padding in tds on the UIBasics.Table

--- a/src/components/(UIBasics)/components/Table/styles.module.css
+++ b/src/components/(UIBasics)/components/Table/styles.module.css
@@ -64,6 +64,7 @@
 	}
 	& tbody tr {
 		& td {
+			padding: var(--sp-1);
 			word-break: break-all;
 		}
 		& td:first-child {
